<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/notification"
        android:icon="@drawable/ic_star_black_24dp"
        android:title="@string/Notification" />

    <item
        android:id="@+id/chat"
        android:icon="@drawable/ic_chat_black_24dp"
        android:title="@string/chat" />


    <item
        android:id="@+id/navigation_faq"
        android:icon="@drawable/ic_help_outline_black_24dp"
        android:title="@string/faq" />


    <item
        android:id="@+id/navigation_endjob"
        android:icon="@drawable/ic_check_box_black_24dp"
        android:title="@string/end_job" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_account_box_black_24dp"
        android:title="@string/profile" />

</menu>

